@@ -33,6 +33,7 @@ Version 3.2.0 - SVN
  - Add 'frozen' flag option to scoreboard plugin interface.
  - Remove language 'extension' column from SQL database, langid is now
    used for source file extensions.
+ - Add multiselect filters on scoreboard with javascript hiding.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
